AggregatorTransformer implemented for SUM operation